--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -4,3 +4,4 @@ deployment:
     - export DEPLOYPATH=/home/kemuning/baralek/
     - /bin/cp index.html $DEPLOYPATH
     - /bin/cp style.css $DEPLOYPATH
+    - /bin/cp -R img $DEPLOYPATH
